Deployment section added.

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -19,6 +19,7 @@ This benchmark shows that RTF of CloudASR batch mode is better than RTF of Googl
 Moreover, the benchmark shows that the CloudASR platform can achieve better accuracy than Google Speech API on limitted domains
   if the used decoding graphs are customized for that domains.
 
+
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.75\textwidth]{./img/batch.pdf}
@@ -70,9 +71,11 @@ Results are summarized on Figure~\ref{fig:parallel-benchmark}.
 Results show that CloudASR platform adds just a very little overhead compared to the raw dummy worker.
 Moreover, results shows that the platform is able to handle much more parallel requests with appropriate number of workers.
 
+\IDEA{Add benchmark code}
 \IDEA{Network capacity, similarity to online recognition}
+\IDEA{Add table with numbers}
 
-\begin{figure}[h]
+\begin{figure}
   \centering
   \includegraphics[width=0.75\textwidth]{./img/parallel.pdf}
 
