--- a/asr.tex
+++ b/asr.tex
@@ -36,18 +36,23 @@
 \blindtext
 
 \subsection{HTK}
+HTK \cite{young1997htk}
 \blindtext
 
 \subsection{RWTH}
+RWTH \cite{rybach2009rwth}
 \blindtext
 
 \subsection{Sphinx}
+Sphinx \cite{lee1990overview}
 \blindtext
 
 \subsection{Kaldi}
+Kaldi \cite{povey2011kaldi}
 \blindtext
 
 \subsection{PyKaldi}
+PyKaldi \cite{platek2014free}
 \blindtext
 
 
@@ -55,14 +60,14 @@
 \blindtext
 
 \subsection{Google Speech API}
+\footnote{\url{https://www.google.com/intl/en/chrome/demos/speech.html}}
 \blindtext
 
 \subsection{Nuance}
-\blindtext
-
-\subsection{Tom Robinson}
+\footnote{\url{http://www.nuance.com/for-developers/dragon/index.htm}}
 \blindtext
 
 \subsection{Wit.ai}
+\footnote{\url{https://wit.ai/}}
 \blindtext
 
