--- a/citations.bib
+++ b/citations.bib
@@ -116,3 +116,30 @@
   year={2014},
   organization={Springer}
 }
+
+@book{young1997htk,
+  title={The HTK book},
+  author={Young, Steve and Evermann, Gunnar and Gales, Mark and Hain, Thomas and Kershaw, Dan and Liu, Xunying and Moore, Gareth and Odell, Julian and Ollason, Dave and Povey, Dan and others},
+  volume={2},
+  year={1997},
+  publisher={Entropic Cambridge Research Laboratory Cambridge}
+}
+
+@inproceedings{rybach2009rwth,
+  title={The RWTH aachen university open source speech recognition system.},
+  author={Rybach, David and Gollan, Christian and Heigold, Georg and Hoffmeister, Bj{\"o}rn and L{\"o}{\"o}f, Jonas and Schl{\"u}ter, Ralf and Ney, Hermann},
+  booktitle={Interspeech},
+  pages={2111--2114},
+  year={2009}
+}
+
+@article{lee1990overview,
+  title={An overview of the SPHINX speech recognition system},
+  author={Lee, K-F and Hon, H-W and Reddy, Raj},
+  journal={Acoustics, Speech and Signal Processing, IEEE Transactions on},
+  volume={38},
+  number={1},
+  pages={35--45},
+  year={1990},
+  publisher={IEEE}
+}
